src/test/deca/context/valid/valid_essentiel/decl_class.deca
// Description:
//    Programme de test de declaration de classes.
//
class A {
	protected int x;
}

class X {
	m() {
		A a = new A();
 		println(a.x);
	}
}

{
	int x = 2;
}



class B extends A {
	p() {}
	q() {}
}


